Fix eToro guide video iframe

--- a/content/guide-etoro.mdx
+++ b/content/guide-etoro.mdx
@@ -152,7 +152,7 @@ canonical: "/guide-etoro"
 <section class="video-section">
 <div class="container">
 <div class="video-container">
-<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" data-src="https://www.youtube.com/embed/JRtjzZn5mhc?rel=0&amp;modestbranding=1" height="500" loading="lazy" referrerpolicy="strict-origin-when-cross-origin" src="about:blank" title="Vidéo de présentation eToro" width="100%"></iframe>
+<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowFullScreen height="500" loading="lazy" referrerPolicy="strict-origin-when-cross-origin" src="https://www.youtube-nocookie.com/embed/JRtjzZn5mhc?rel=0&amp;modestbranding=1" title="Vidéo de présentation eToro" width="100%"></iframe>
 <noscript>
 <p>Regardez la vidéo sur <a href="https://www.youtube.com/watch?v=JRtjzZn5mhc" rel="noopener noreferrer" target="_blank">YouTube</a>.</p>
 </noscript>
